@@ -14,7 +14,8 @@ namespace scene
 //! constructor
 CSceneNodeAnimatorTexture::CSceneNodeAnimatorTexture(const core::array<video::ITexture*>& textures, 
 					 s32 timePerFrame, bool loop, u32 now)
-: TimePerFrame(timePerFrame), StartTime(now), Loop(loop)
+: ISceneNodeAnimatorFinishing(0),
+	TimePerFrame(timePerFrame), StartTime(now), Loop(loop)
 {
 	#ifdef _DEBUG
 	setDebugName("CSceneNodeAnimatorTexture");
@@ -28,7 +29,7 @@ CSceneNodeAnimatorTexture::CSceneNodeAnimatorTexture(const core::array<video::IT
 		Textures.push_back(textures[i]);
 	}
 
-	EndTime = now + (timePerFrame * Textures.size());
+	FinishTime = now + (timePerFrame * Textures.size());
 }
 
 
@@ -61,10 +62,15 @@ void CSceneNodeAnimatorTexture::animateNode(ISceneNode* node, u32 timeMs)
 		const u32 t = (timeMs-StartTime);
 
 		u32 idx = 0;
-		if (!Loop && timeMs >= EndTime)
+		if (!Loop && timeMs >= FinishTime)
+		{
 			idx = Textures.size() - 1;
+			HasFinished = true;
+		}
 		else
+		{
 			idx = (t/TimePerFrame) % Textures.size();
+		}
 
 		if (idx < Textures.size())
 			node->setMaterialTexture(0, Textures[idx]);
